# MPILifeTask

./: CMakeLists.txt  README.md  input.txt  main.cpp  output.txt
